--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,8 @@
   --background-color: #E5E5E5;
   --white: #FFF;
   --orange: #EB9B00;
+  --blue-gradient: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+  
 }
 
 body {
